fixed some uncatched exceptions:
gui.VennMakerLegend.paintLegend(VennMakerLegend.java),

java.lang.IllegalArgumentException: IsFirst() useless for non
categorical attribute types!
	at data.AttributeType.isFirst(AttributeType.java:253)
	at gui.MouseMenuFactory.getActorMenu(MouseMenuFactory.java:307)

java.lang.NullPointerException
	at interview.InterviewController.performAction(InterviewController.java:606)
	at interview.InterviewController.start(InterviewController.java:682)

--- a/.classpath
+++ b/.classpath
@@ -30,5 +30,11 @@
 	</classpathentry>
 	<classpathentry kind="lib" path="src/main/resources/flamingo.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
+	<classpathentry excluding="**" kind="src" output="target/test-classes" path="src/test/resources">
+		<attributes>
+			<attribute name="maven.pomderived" value="true"/>
+			<attribute name="test" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
